# thesis-bach

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
chap4-memory-management/: Cargo.toml
chap4-memory-management/cpp/: data.cpp
chap4-memory-management/src/: data.rs  lib.rs
chap6-cross-paradigm/1-object-as-resource-owner/: Cargo.toml
chap6-cross-paradigm/1-object-as-resource-owner/cpp/: file.cpp
chap6-cross-paradigm/1-object-as-resource-owner/examples/: main-file.rs
chap6-cross-paradigm/1-object-as-resource-owner/src/: file.rs
chap6-cross-paradigm/2.1-object-on-stack/: Cargo.toml
chap6-cross-paradigm/2.1-object-on-stack/cpp/: main_transfer_assignment.cpp  main_transfer_func.cpp
chap6-cross-paradigm/2.2-object-on-heap/: Cargo.toml
chap6-cross-paradigm/2.2-object-on-heap/cpp/: funcs_array.cpp  main_array_file.cpp  main_single_file.cpp  single.cpp
chap6-cross-paradigm/2.2-object-on-heap/examples/: array_file.rs  single_file.rs
chap6-cross-paradigm/2.2-object-on-heap/src/: funcs_array.rs  funcs_single.rs  lib.rs  single_funcs.rs
chap6-cross-paradigm/2.3-elevating-heap/: Cargo.toml
chap6-cross-paradigm/2.3-elevating-heap/src/: lib.rs  mybox.rs  myvec.rs
chap6-cross-paradigm/2.3-elevating-heap/tests/: test_mybox.rs
chap7-cross-paradigm/1-object-as-resource-owner/cpp/: file.cpp  main.cpp
chap7-cross-paradigm/1-object-as-resource-owner/src/: file.rs  lib.rs  main.rs
chap7-cross-paradigm/2.1-object-on-stack/: Cargo.toml
chap7-cross-paradigm/2.1-object-on-stack/src/: main.rs
chap7-cross-paradigm/2.2-object-on-heap/: Cargo.toml  base.rs
chap7-cross-paradigm/2.2-object-on-heap/cpp/: main_single_data.cpp
chap7-cross-paradigm/2.2-object-on-heap/src/: main.rs  single.rs
snippets/macros/rust/: find_min.rs  op_assign.rs
snippets/move/cpp/: move-struct.cpp  new-move.cpp  rvo.cpp
snippets/move/rust/: move-tr  (+3 more)
structs/rust/: main.rs  mem_array.rs  my_box.rs
(+31 files in other folders)
