[package]
name = "object-on-heap"
version = "0.1.0"
edition = "2024"

[dependencies]
# object-as-resource-owner = { path = "../1-object-as-resource-owner/" }
# memory-management = { path = "../../chap4-memory-management/" }

memory-management = { workspace = true }
object-as-resource-owner = { workspace = true }
